# edge

./: Makefile  README.md  index.html  index_base64.html  pyproject.toml  verify_clarius.py
app/: main.py
app/constant/: common_status_codes.py  enums.py
app/core/: app_status.py  setting.py
app/core/kafka/: __init__.py  consumer.py  delivery_messages.py  producer.py
app/initialize/: database.py  minio.py  websocket.py
app/middlewares/: auth_middleware.py
app/migrations/upgrade/: 001.users.upgrade.sql
app/modules/auth/: security.py
app/modules/clarius/: config.py  server.py  servicer.py
app/modules/clarius/proto/: __init__.py  frame_pb2.py  frame_pb2_grpc.py
app/modules/user/: controller.py  dependencies.py  factory.py  model.py  repository.py  schemas.py  service.py  user_status_codes.py
app/scripts/: create_admin.py
app/utils/: hasher.py  response.py  timestamp.py
